# COVID-911

./: README.md
etc/Autoware/: 7_7.csv  motor_distance.cpp
foot_detection/: collect_data(capture_foot).py  real_time_foot_detection.py  train_foor_detector.py
main/: CMakeLists.txt  main.cpp  motor_driver.cpp  package.xml
main/include/motor_final/: motor_driver.h
main/launch/: motor_final.launch
mask_detection/: alert_sound.py  real_time_mask_detection.py  train_mask_detector.py
script/: example0.sh  example1.sh  example2.sh  example3.sh  fanusb.sh  final.sh
