<?xml version="1.0"?>
<package format="2">
  <name>motor_final</name>
  <version>0.0.0</version>
  <description>The Motor_final package</description>
  <maintainer email="tyang0003@gmail.com">Sun Park</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>
</package>
